--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Buttons -->
         <a href="demo.html"><button class="demo-button">Generation Examples</button></a>
         <a href="https://arxiv.org/abs/2309.10740" target="_blank">
-            <button class="paper-button">Preprint Paper</button>
+            <button class="paper-button"><i class="ai ai-arxiv"></i>Paper</button>
         </a>
         <a href="https://huggingface.co/spaces/Bai-YT/ConsistencyTTA" target="_blank">
             <button class="livedemo-button">🤗 Live Demo</button>
@@ -263,7 +263,7 @@
         <h2>Citing Our Work (BibTeX)</h2>
         <div id="bibtex1" class="bibtex" onclick="copyToClipboard('bibtex1')">
             <i class="far fa-copy copy-icon"></i>
-<pre>@inproceedings{bai2024accelerating,
+<pre>@inproceedings{bai2024consistencytta,
   author = {Bai, Yatong and Dang, Trung and Tran, Dung and Koishida, Kazuhito and Sojoudi, Somayeh},
   title = {ConsistencyTTA: Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation},
   booktitle = {INTERSPEECH},
