--- a/diversity.html
+++ b/diversity.html
@@ -25,7 +25,7 @@
         <!-- Buttons -->
         <a href="index.html"><button class="home-button">Project Home</button></a>
         <a href="https://arxiv.org/abs/2309.10740" target="_blank">
-            <button class="paper-button">Preprint Paper</button>
+            <button class="paper-button"><i class="ai ai-arxiv"></i>Paper</button>
         </a>
         <a href="https://huggingface.co/spaces/Bai-YT/ConsistencyTTA" target="_blank">
             <button class="livedemo-button">🤗 Live Demo</button>
